# ecommerce-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: bot_workflow.yaml
docker/: Dockerfile.bot  api.Dockerfile  bot.Dockerfile
src/: alembic.ini  api.py  bot.py  main.py
src/admin/: views.py
src/bot/: __init__.py  bot_builder.py
src/bot/callbacks/: __init__.py
src/bot/handlers/: __init__.py  find_handler.py  product_handler.py  start_handler.py
src/bot/localization/: __init__.py  find.py  markups.py  product.py  start_loc.py
src/bot/markups/: __init__.py  customers.py  product.py  start.py
src/bot/schemas/: __init__.py  customers.py  orders.py  products.py  transactions.py
src/bot/services/: __init__.py  admin.py  customers.py  helper.py  orders.py  products.py  requisites.py  transactions.py
src/bot/utils/: __init__.py  callbacks.py  handlers.py  images.py  messages.py  product.py
src/config/: settings.py
src/db/: __init__.py  config.py  models.py
src/db/migrations/: env.py
src/parsers/: __init__.py  prices.py
