[tool.poetry]
name = "store-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Kiel Ed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
alembic = "^1.10.3"
fastapi = "^0.95.0"
python-telegram-bot = { extras = ["webhooks"], version = "^20.2" }
pydantic = "^1.10.7"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
aiohttp = { extras = ["speedups"], version = "^3.8.4" }
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
black = "20.8b1"
isort = "^4.3.21"
flake8 = "^3.7.9"
autoflake = "^1.3.1"
ipython = "7.19.0"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
